some functionalities cmpleted

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  /* overflow: scroll; */
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -136,8 +136,4 @@ input[type="checkbox"] {
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
-}
-
-footer {
-  text-align: center;
 }
